Add endpoints for policies and policy-type
